test/fail/inheritance/inherit_variant.lily
#[
SyntaxError: 'Two' cannot be inherited from.
    from inherit_variant.lily:11:
]#

enum Test {
    One,
    Two
}

class example < Two { }
